# role-downloader

./: .ansible-lint  .gitignore  .travis.yml  .yamllint  README.md  pyproject.toml  requirements.yml
.cookiecutter/: cookiecutter.json
.github/markdown/: ISSUE_TEMPLATE.md
.github/scripts/: setup.sh
.github/workflows/: push.yml  release.yml
defaults/: main.yml
meta/: main.yml
molecule/default/: molecule.yml
molecule/docker1/: converge.yml  verify.yml
molecule/downloads/: cleanup.yml  converge.yml  molecule.yml  verify.yml
molecule/hostmachine1/: converge.yml
tasks/: main.yml
tests/: test.yml
